--- a/notebooks/from-scratch.ipynb
+++ b/notebooks/from-scratch.ipynb
@@ -134,13 +134,13 @@
      "text": [
       "{\n",
       "    \"CLs_exp\": [\n",
-      "        0.07807427911686152,\n",
-      "        0.17472571775474582,\n",
-      "        0.35998495263681274,\n",
-      "        0.6343568235898907,\n",
-      "        0.8809947004472013\n",
+      "        0.0004090387453250841,\n",
+      "        0.0032606968023913925,\n",
+      "        0.02255257597653917,\n",
+      "        0.11898700005707148,\n",
+      "        0.39844667251932997\n",
       "    ],\n",
-      "    \"CLs_obs\": 0.3599845631401913\n",
+      "    \"CLs_obs\": 0.053994246621274014\n",
       "}\n"
      ]
     }
@@ -169,13 +169,13 @@
      "text": [
       "{\n",
       "    \"CLs_exp\": [\n",
-      "        0.14695763778146098,\n",
-      "        0.2738178123017487,\n",
-      "        0.47642647066827803,\n",
-      "        0.7289555883715226,\n",
-      "        0.922094011644031\n",
+      "        0.031409129113842485,\n",
+      "        0.09019050672644717,\n",
+      "        0.2345563523518709,\n",
+      "        0.5053369568952392,\n",
+      "        0.8098259293224213\n",
       "    ],\n",
-      "    \"CLs_obs\": 0.4764263982925686\n",
+      "    \"CLs_obs\": 0.3536906623262466\n",
       "}\n"
      ]
     }
@@ -200,7 +200,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0;39m0.4764263982925686\u001b[0m\n"
+      "\u001b[0;39m0.3536906623262466\u001b[0m\n"
      ]
     }
    ],
@@ -212,7 +212,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and of course given the way the CLI is setup you can pipe in the JSON which means that you can grab remotely hosted files (think HEPData). Here we `curl` the `example.json` down from GitHub"
+    "and of course given the way the CLI is setup you can pipe in the JSON which means that you can grab remotely hosted files (think HEPData). Here we `curl` down the Background only and signal patch JSON from HEPData"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "$ curl -sL https://doi.org/10.17182/hepdata.89408.v1/r2 | \\\n",
+    "  tar -O -xzv RegionA/BkgOnly.json | \\\n",
+    "  pyhf cls --patch <(curl -sL https://doi.org/10.17182/hepdata.89408.v1/r2 | \\\n",
+    "    tar -O -xzv RegionA/patch.sbottom_1300_205_60.json) | \\\n",
+    "  jq .CLs_obs\n",
+    "```"
    ]
   },
   {
@@ -224,22 +237,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "    \"CLs_exp\": [\n",
-      "        0.14695763778146098,\n",
-      "        0.2738178123017487,\n",
-      "        0.47642647066827803,\n",
-      "        0.7289555883715226,\n",
-      "        0.922094011644031\n",
-      "    ],\n",
-      "    \"CLs_obs\": 0.4764263982925686\n",
-      "}\n"
+      "RegionA/BkgOnly.json\n",
+      "RegionA/patch.sbottom_1300_205_60.json\n",
+      "/home/jovyan/src/pyhf/src/pyhf/tensor/numpy_backend.py:252: RuntimeWarning: invalid value encountered in log\n",
+      "  return n * np.log(lam) - lam - gammaln(n + 1.0)\n",
+      "\u001b[0;39m0.24443635754482018\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "! curl -sL https://raw.githubusercontent.com/matthewfeickert/talk-PyHEP-2019/master/notebooks/example.json \\\n",
-    "    | pyhf cls --patch new_signal.json"
+    "! curl -sL https://doi.org/10.17182/hepdata.89408.v1/r2 | tar -O -xzv RegionA/BkgOnly.json > RegionA_BkgOnly.json\n",
+    "! curl -sL https://doi.org/10.17182/hepdata.89408.v1/r2 | tar -O -xzv RegionA/patch.sbottom_1300_205_60.json > RegionA_patch.sbottom_1300_205_60.json\n",
+    "! pyhf cls RegionA_BkgOnly.json --patch RegionA_patch.sbottom_1300_205_60.json | jq .CLs_obs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and compare to another signal point\n",
+    "\n",
+    "```\n",
+    "$ curl -sL https://doi.org/10.17182/hepdata.89408.v1/r2 | \\\n",
+    "  tar -O -xzv RegionA/BkgOnly.json | \\\n",
+    "  pyhf cls --patch <(curl -sL https://doi.org/10.17182/hepdata.89408.v1/r2 | \\\n",
+    "    tar -O -xzv RegionA/patch.sbottom_1300_230_100.json) | \\\n",
+    "  jq .CLs_obs\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RegionA/patch.sbottom_1300_230_100.json\n",
+      "/home/jovyan/src/pyhf/src/pyhf/tensor/numpy_backend.py:252: RuntimeWarning: invalid value encountered in log\n",
+      "  return n * np.log(lam) - lam - gammaln(n + 1.0)\n",
+      "\u001b[0;39m0.040766025813435774\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "! curl -sL https://doi.org/10.17182/hepdata.89408.v1/r2 | tar -O -xzv RegionA/patch.sbottom_1300_230_100.json > RegionA_patch.sbottom_1300_230_100.json\n",
+    "! pyhf cls RegionA_BkgOnly.json --patch RegionA_patch.sbottom_1300_230_100.json | jq .CLs_obs"
    ]
   },
   {
